NEW254297
StyleRuleGroup should be composited instead of inherited
https://bugs.webkit.org/show_bug.cgi?id=254297
Summary StyleRuleGroup should be composited instead of inherited
Matthieu Dubet
Reported 2023-03-22 16:48:28 PDT
Currently, StyleRuleGroup is modeled exactly like CSSGroupingRule (being an intermediate class in the Rule <-> StyleRule hierarchy). https://w3c.github.io/csswg-drafts/cssom/#the-cssgroupingrule-interface We should favor composition instead of inheritance in general, and this is also a prerequisite of the CSS Nesting CSSOM implementation.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-22 16:48:45 PDT
Matthieu Dubet
Comment 2 2023-03-22 16:52:07 PDT
Note You need to log in before you can comment on or make changes to this bug.