StyleRuleGroup should use composition instead of inheritance https://bugs.webkit.org/show_bug.cgi?id=254297 rdar://107103847

Reviewed by NOBODY (OOPS!).

The inheritance comes from the CSSGroupingRule spec,
but we have no reason to follow the same pattern/hierarchy in our
internal representation.

* Source/WebCore/css/CSSConditionRule.cpp:
(WebCore::CSSConditionRule::CSSConditionRule):
* Source/WebCore/css/CSSConditionRule.h:
* Source/WebCore/css/CSSContainerRule.cpp:
(WebCore::CSSContainerRule::styleRuleContainer const):
* Source/WebCore/css/CSSGroupingRule.cpp:
(WebCore::CSSGroupingRule::CSSGroupingRule):
(WebCore::CSSGroupingRule::~CSSGroupingRule):
(WebCore::CSSGroupingRule::insertRule):
(WebCore::CSSGroupingRule::deleteRule):
(WebCore::CSSGroupingRule::cssTextForDeclsAndRules const):
(WebCore::CSSGroupingRule::length const):
(WebCore::CSSGroupingRule::item const):
(WebCore::CSSGroupingRule::reattach):
(WebCore::CSSGroupingRule::groupRule const):
(WebCore::CSSGroupingRule::groupRule):
* Source/WebCore/css/CSSGroupingRule.h:
(WebCore::CSSGroupingRule::rule const):
(WebCore::CSSGroupingRule::groupRule const): Deleted.
(WebCore::CSSGroupingRule::groupRule): Deleted.
* Source/WebCore/css/CSSLayerBlockRule.cpp:
(WebCore::CSSLayerBlockRule::name const):
* Source/WebCore/css/CSSMediaRule.cpp:
(WebCore::CSSMediaRule::mediaQueries const):
(WebCore::CSSMediaRule::setMediaQueries):
* Source/WebCore/css/CSSSupportsRule.cpp:
(WebCore::CSSSupportsRule::conditionText const):
* Source/WebCore/css/StyleRule.cpp:
(WebCore::StyleRuleGroup::StyleRuleGroup):
(WebCore::StyleRuleGroup::childRules):
(WebCore::StyleRuleGroup::fromStyleRuleBase):
(WebCore::StyleRuleMedia::StyleRuleMedia):
(WebCore::StyleRuleSupports::StyleRuleSupports):
(WebCore::StyleRuleLayer::StyleRuleLayer):
(WebCore::StyleRuleContainer::StyleRuleContainer):
* Source/WebCore/css/StyleRule.h:
(WebCore::StyleRuleBase::isStyleRuleWithNesting const):
(WebCore::StyleRuleBase::isGroupRule const):
* Source/WebCore/css/StyleSheetContents.cpp:
(WebCore::traverseRulesInVector):
* Source/WebCore/style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::addChildRule):
* Source/WebCore/style/StyleInvalidator.cpp:
(WebCore::Style::shouldDirtyAllStyle):