Source/WebCore/style/StyleInvalidator.cpp
@@ -50,7 +50,7 @@ static bool shouldDirtyAllStyle(const Vector<RefPtr<StyleRuleBase>>& rules)
 {
     for (auto& rule : rules) {
         if (is<StyleRuleMedia>(*rule)) {
-            if (shouldDirtyAllStyle(downcast<StyleRuleMedia>(*rule).childRules()))
+            if (shouldDirtyAllStyle(downcast<StyleRuleMedia>(*rule).ruleGroup().childRules()))
                 return true;
             continue;
         }
